--- a/app/views/results/edit.html.erb
+++ b/app/views/results/edit.html.erb
@@ -1,5 +1,74 @@
-<h1>New Result</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Races</title>
+</head>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <a class="navbar-brand" href="#"><b>Fog City Run</b></a>
+  <ul class="nav navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to "Home", root_path %></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Races</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Loop-Beer-Loop', loop_beer_path %></a>
+    </li>
+  </ul>
+  <ul class="nav navbar-nav navbar-right">
+    <% if current_user %>
+    <%= current_user.name %></i> |  
+    <%= link_to "Sign out", signout_path, id: "sign_out" %>
+    <% else %>
+    <%= link_to "Sign in", "/auth/facebook", id: "sign_in" %>
+    <% end %>
+</ul>
+</nav>
+<body style="padding-top: 60px">
+<div class="container-fluid">
+<%= form_for :result, url: result_path(@result), method: :patch do |f| %>
+  <% if @result.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@result.errors.count, "error") %> prohibited
+        this article from being saved:
+      </h2>
+      <ul>
+        <% @result.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <p>
+    <%= f.label :rank %><br>
+    <%= f.text_field :rank %>
+  </p>
+  <p>
+    <%= f.label :bib %><br>
+    <%= f.text_field :bib %>
+  </p>
+   <p>
+    <%= f.label :group_Name %><br>
+    <%= f.text_field :group_name %>
+  </p>
+   <p>
+    <%= f.label :racer_id %><br>
+    <%= f.text_field :racer_id %>
+  </p>
+   <p>
+    <%= f.label :time %><br>
+    <%= f.text_field :time %>
+  </p>
  
-<%= render 'form' %>
- 
-<%= link_to 'Back', results_path %>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
+  </div>
+</body>
+</html>
