--- a/app/views/results/upload.html.erb
+++ b/app/views/results/upload.html.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Races</title> 
+  <title>Racers</title>
 </head>
 <nav class="navbar navbar-default navbar-fixed-top">
-  <a class="navbar-brand" href="<%= root_path %>"><b>Fog City Run</b> </a>
+  <a class="navbar-brand" href="#"><b>Fog City Run</b></a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" <%= link_to "Home", root_path %></a>
+      <a class="nav-link" <%= link_to "Home", root_path %></a>  
     </li>
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
@@ -15,14 +15,17 @@
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Races', races_path %></a>
     </li>
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Racer Count</a>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Racer Count', count_path %></a>
     </li>
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Records', records_path %></a>
     </li>
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Loop-Beer-Loop', loop_beer_path %></a>
+    </li>
+    <li class="nav-item active">
+      <a class="nav-link" <%= link_to 'Import', '/import' %></a>
     </li>
   </ul>
   <ul class="nav navbar-nav navbar-right">
@@ -37,7 +40,23 @@
 <body style="padding-top: 60px">
 <div class="container-fluid">
   <div class="row">
-    <%= column_chart Result.group(:race_id).count, min: 0, max: 22, colors: ["grey"] %>
-  </div>
+    <div class="col-lg-5">
+      <h2> Import Results</h2>
+      <%= form_tag upload_results_path, multipart: true do %>
+        <%=file_field_tag :file%>
+        <br>
+        <%=submit_tag "Import"%>
+      <% end %>
+    </div>
+<!--   <div class="row">
+    <div class="col-lg-5"> 
+    <h2> Edit </h2>
+        <%= form_tag(:action => "read_import") do %>
+          <%= text_area_tag 'body', @results, size: "100x10" %>
+        <%=submit_tag "Submit"%>
+        <% end %>
+    </div>
+  </div> -->
+</div>
 </body>
 </html>
