--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
   <a class="navbar-brand" href="<%= root_path %>"><b>Fog City Run</b> </a>
   <ul class="nav navbar-nav">
     <li class="nav-item active">
-      <a class="nav-link" <%= link_to "Home", root_path %></a>
+      <a class="nav-link" <%= link_to "Home", root_path %></a>  
     </li>
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
@@ -25,8 +25,18 @@
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Loop-Beer-Loop', loop_beer_path %></a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Import', '/import' %></a>
+    </li>
   </ul>
-  </ul>
+  <ul class="nav navbar-nav navbar-right">
+    <% if current_user %>
+    <%= current_user.name %></i> |  
+    <%= link_to "Sign out", signout_path, id: "sign_out" %>
+    <% else %>
+    <%= link_to "Sign in", "/auth/facebook", id: "sign_in" %>
+    <% end %>
+</ul>
 </nav>
 <body class="container welcome" style="padding-top: 60px">
 <div class="container-fluid">
