--- a/app/views/races/index.html.erb
+++ b/app/views/races/index.html.erb
@@ -24,6 +24,11 @@
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Loop-Beer-Loop', loop_beer_path %></a>
     </li>
+    <% if current_user.admin? %>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Import', '/import' %></a>
+    </li>
+    <% end %>
   </ul>
   <form class="navbar-form navbar-left" role="search">
     <div class="input-group">
