--- a/app/views/races/show.html.erb
+++ b/app/views/races/show.html.erb
@@ -21,6 +21,11 @@
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Loop-Beer-Loop', loop_beer_path %></a>
     </li>
+    <% if current_user.admin? %>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Import', '/import' %></a>
+    </li>
+    <% end %>
   </ul>
   <ul class="nav navbar-nav navbar-right">
     <% if current_user %>
