Adding flash messages for results import

--- a/app/views/results/upload.html.erb
+++ b/app/views/results/upload.html.erb
@@ -50,7 +50,7 @@
         Date: <%=date_field_tag :date%>
         <br>
         <br>
-        <%=submit_tag "Import"%>
+        <%=button_tag "Import", class: "btn btn-default"%>
       <% end %>
     </div>
 </div>
