--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,16 @@
 </head>
 <body>
 
+<div class="container-fluid">
+  <% flash.each do |key, value| %>
+	<div class="row">
+	<div class="col-md-3">
+    <div class="alert alert-<%= key %>"><%= value %></div>
+    </div>
+    </div>
+  <% end %>
+</div>
+
 <%= yield %>
 
 </body>
