--- a/app/views/racers/show.html.erb
+++ b/app/views/racers/show.html.erb
@@ -28,14 +28,7 @@
     </li>
     <% end %>
   </ul>
-  <ul class="nav navbar-nav navbar-right">
-    <% if current_user %>
-    <%= current_user.name %></i> |  
-    <%= link_to "Sign out", signout_path, id: "sign_out" %>
-    <% else %>
-    <%= link_to "Sign in", "/auth/facebook", id: "sign_in" %>
-    <% end %>
-</ul>
+  <%= render "shared/login" %>
 </nav>
 <body style="padding-top: 70px">
 <div class="container-fluid">
