--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,7 +25,7 @@
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Loop-Beer-Loop', loop_beer_path %></a>
     </li>
-    <% if current_user %>
+    <% if current_user.admin? %>
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Import', '/import' %></a>
     </li>
