--- a/app/views/pages/import.html.erb
+++ b/app/views/pages/import.html.erb
@@ -18,12 +18,7 @@
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Racer Count', count_path %></a>
     </li>
-    <% if current_user.admin? %>
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to 'Import', '/import' %></a>
-    </li>
-    <% end %>
-  </ul>
+    <%= render "shared/import_button" %>
 </nav>
 <body style="padding-top: 60px">
 <div class="container-fluid">
