--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,6 +24,7 @@
 </nav>
 <body style="padding-top: 60px">
 <div class="container-fluid">
+  <h2> Your Profile </h2>
   <p>
     <strong>Name:</strong>
     <%= @user.name %>
@@ -43,6 +44,7 @@
     <strong>Strava Link:</strong>
     <%= @user.strava_link %>
   </p>
+  <%= link_to 'Back to racers', racers_path %></a>
   </div>
 </body>
 </html>
