--- a/app/views/racers/show.html.erb
+++ b/app/views/racers/show.html.erb
@@ -34,17 +34,18 @@
     <div class="panel-heading">Racer Info</div>
     <div class="panel-body">
       <h2><%= @racer.first_name %> <%= @racer.last_name %></h2>
+      <% if !current_user.nil? and current_user.racer_id.to_i == @racer.id.to_i %>
+      <%= link_to "Edit", edit_user_path, :class => "btn btn-danger" %>
+      <%= link_to image_tag("icon-strava-blue.svg", height: 30), current_user.strava_link, :class => "fa-fw fa-lg" %>
+      <% elsif User.pluck(:racer_id).include? @racer.id %>
+      Another user has claimed this racer.
+      <%= link_to image_tag("icon-strava-blue.svg", height: 30), User.where(:racer_id => @racer.id).first.strava_link, :class => "fa-fw fa-lg" %>
+      <% elsif !current_user.nil? %>
+      <%= link_to("Claim", user_path(current_user.id, :racer_id => @racer.id ), :method => :put, :confirm => "Are you sure?", :class => "btn btn-success")%>
+      <% end %>
       <h4>Races: <%= @racer.results.count %></h4>
       <h4>PR: <%= @racer.results.order(:time).first.time%></h4>
       <h4>Loop-Beer Runs: <%= @racer.results.where("group_name = ?", "Loop-Beer").count %></h4>
-      <% if !current_user.nil? and current_user.racer_id.to_i == @racer.id.to_i %>
-      (This is you) <%= link_to "Edit", edit_user_path %>
-      <%= link_to image_tag("icon-strava-blue.svg", height: 18), current_user.strava_link, :class => "fa-fw fa-lg" %>
-      <% elsif User.pluck(:racer_id).include? @racer.id %>
-      Another user has claimed this racer.
-      <% elsif !current_user.nil? %>
-      <%= link_to("Claim this racer", user_path(current_user.id, :racer_id => @racer.id), :method => :put, :confirm => "Are you sure?")%>
-      <% end %>
        </div>
       </div>
     </div>
