--- a/app/views/races/index.html.erb
+++ b/app/views/races/index.html.erb
@@ -57,7 +57,7 @@
           <td><%= result[1] %></td>
           <% if current_user and current_user.admin? %>
             <td><%= link_to 'Edit', race_path(Race.find(result[0])) %> | <%= link_to 'Destroy',
-                  race_path(Race.find(result[0])), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                  race_path(Race.find(result[0])), method: :delete, data: { confirm: 'Are you sure you want to delete ' + Race.find(result[0]).date.to_s + '?'  } %></td>
           <% end %>
         </tr>
       <% end %>
