--- a/app/views/results/new.html.erb
+++ b/app/views/results/new.html.erb
@@ -1,8 +1,33 @@
-<h1>New Result</h1>
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Users</title>
+</head>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <a class="navbar-brand" href="#"><b>Fog City Run</b></a>
+  <ul class="nav navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to "Home", root_path %></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Races</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Loop-Beer-Loop', loop_beer_path %></a>
+    </li>
+    <%= render "shared/import_button" %>
+  </ul>
+  <%= render "shared/login" %>
+</nav>
+<body style="padding-top: 60px">
+<div class="container-fluid">
+<h2> New Result </h2>
 <%= form_for @result do |r| %>
  
-  <% if @result.errors.any? %>
+<!--   <% if @result.errors.any? %>
     <div id="error_explanation">
       <h2>
         <%= pluralize(@result.errors.count, "error") %> prohibited
@@ -14,7 +39,11 @@
         <% end %>
       </ul>
     </div>
-  <% end %>
+  <% end %> -->
+  <p>
+    <%= r.label :id %><br>
+    <%= r.text_field :id, :value => Result.maximum(:id).next %>
+  </p>
  
   <p>
     <%= r.label :rank %><br>
@@ -29,8 +58,8 @@
     <%= r.text_field :racer_id %>
   </p>
   <p>
-    <%= r.label :group %><br>
-    <%= r.text_field :group %>
+    <%= r.label :group_name %><br>
+    <%= r.text_field :group_name %>
   </p>
   <p>
     <%= r.label :time %><br>
@@ -38,11 +67,12 @@
   </p>
   <p>
     <%= r.label :race_id %><br>
-    <%= r.text_field :race_id %>
+    <%= r.text_field :race_id, :value => params[:format] %>
   </p>
- 
   <p>
-    <%= r.submit %>
+    <%=button_tag "Submit", class: "btn btn-default"%>
   </p>
- 
-<% end %>
+  </div>
+  <% end %>
+</body>
+</html>
