--- a/app/views/races/show.html.erb
+++ b/app/views/races/show.html.erb
@@ -49,15 +49,17 @@
         <td><%= result.group_name %></td>
         <td><%= link_to result.racer.first_name + ' ' + result.racer.last_name, racer_path(result.racer)%></td>
         <td><%= result.time %></td>
+        <% if current_user and current_user.admin? %>
         <td><%= link_to 'Edit', edit_result_path(result) %> |   <%= link_to 'Destroy',
                 result_path(result), method: :delete, data: { confirm: 'Are you sure you want to delete the result for ' + result.racer.first_name.to_s + ' ' + result.racer.last_name.to_s } %></td>
+        <% end %>
       </tr>
     <% end %>
     </tbody>
   </table>
   </div>
   <div class="row text-center">
-  <%= link_to 'New Result', new_result_path(@race.date), :class => "btn btn-success" %>
+  <%= link_to 'New Result', new_result_path(:race_id => @race.id), :class => "btn btn-success" %>
   </div>
 </div>
 </body>
