--- a/app/views/results/new.html.erb
+++ b/app/views/results/new.html.erb
@@ -13,7 +13,7 @@
       <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Races</a>
+      <a class="nav-link" <%= link_to 'Races', races_path %></a>
     </li>
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Loop-Beer-Loop', loop_beer_path %></a>
@@ -27,7 +27,7 @@
 <h2> New Result </h2>
 <%= form_for @result do |r| %>
  
-<!--   <% if @result.errors.any? %>
+  <% if @result.errors.any? %>
     <div id="error_explanation">
       <h2>
         <%= pluralize(@result.errors.count, "error") %> prohibited
@@ -39,12 +39,7 @@
         <% end %>
       </ul>
     </div>
-  <% end %> -->
-  <p>
-    <%= r.label :id %><br>
-    <%= r.text_field :id, :value => Result.maximum(:id).next %>
-  </p>
- 
+  <% end %>
   <p>
     <%= r.label :rank %><br>
     <%= r.text_field :rank %>
@@ -67,7 +62,7 @@
   </p>
   <p>
     <%= r.label :race_id %><br>
-    <%= r.text_field :race_id, :value => params[:format] %>
+    <%= r.text_field :race_id, :value => params[:race_id] %>
   </p>
   <p>
     <%=button_tag "Submit", class: "btn btn-default"%>
