--- a/app/views/racers/show.html.erb
+++ b/app/views/racers/show.html.erb
@@ -35,7 +35,7 @@
     <div class="panel-body">
       <h2><%= @racer.first_name %> <%= @racer.last_name %></h2>
       <% if !current_user.nil? and current_user.racer_id.to_i == @racer.id.to_i %>
-      <%= link_to "Edit", edit_user_path, :class => "btn btn-danger" %>
+      <%= link_to "Edit", edit_user_path, :class => "btn btn-warning" %>
       <%= link_to image_tag("icon-strava-blue.svg", height: 30), current_user.strava_link, :class => "fa-fw fa-lg" %>
       <% elsif User.pluck(:racer_id).include? @racer.id %>
       Another user has claimed this racer.
