--- a/app/views/races/show.html.erb
+++ b/app/views/races/show.html.erb
@@ -56,9 +56,11 @@
     <% end %>
     </tbody>
   </table>
-  <div class="row text-center">
-  <%= link_to 'New Result', new_result_path(:race_id => @race.id), :class => "btn btn-success" %>
-  </div>
+  <% if current_user and current_user.admin? %>
+    <div class="row text-center">
+    <%= link_to 'New Result', new_result_path(:race_id => @race.id), :class => "btn btn-success" %>
+    </div>
+  <% end %>
 </div>
 </body>
 </html>
