--- a/app/views/racers/show.html.erb
+++ b/app/views/racers/show.html.erb
@@ -34,10 +34,12 @@
     <div class="panel-heading">Racer Info</div>
     <div class="panel-body">
       <h2><%= @racer.first_name %> <%= @racer.last_name %></h2>
-      <% if !current_user.nil? and current_user.racer_id.to_i == @racer.id.to_i %>
+      <% if current_user.nil? %>
+      Please login.
+      <% elsif !current_user.nil? and current_user.racer_id.to_i == @racer.id.to_i %>
       <%= link_to "Edit", edit_user_path, :class => "btn btn-warning" %>
       <%= link_to image_tag("icon-strava-blue.svg", height: 30), current_user.strava_link, :class => "fa-fw fa-lg" %>
-      <% elsif User.pluck(:racer_id).include? @racer.id %>
+      <% elsif !current_user.nil? and User.pluck(:racer_id).include? @racer.id %>
       Another user has claimed this racer.
       <%= link_to image_tag("icon-strava-blue.svg", height: 30), User.where(:racer_id => @racer.id).first.strava_link, :class => "fa-fw fa-lg" %>
       <% elsif !current_user.nil? %>
