- Restyling of navbar (works better for mobile). - Moved navbar to partials.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <script src="//fast.eager.io/8zFOq25yxx.js"></script>
+  <%= render "shared/navbar" %>
 </head>
 <body>
 
