--- a/app/views/pages/import.html.erb
+++ b/app/views/pages/import.html.erb
@@ -1,25 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Racers</title>
+  <script src="//code.jquery.com/jquery.min.js"></script>
+  <title>Import</title>
+  <%= render "shared/navbar" %>
 </head>
-<nav class="navbar navbar-default navbar-fixed-top">
-  <a class="navbar-brand" href="#"><b>Fog City Run</b></a>
-  <ul class="nav navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to "Home", root_path %></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to 'Races', races_path %></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to 'Racer Count', count_path %></a>
-    </li>
-    <%= render "shared/import_button" %>
-</nav>
 <body style="padding-top: 60px">
 <div class="container-fluid">
   <div class="row">
