--- a/app/views/races/index.html.erb
+++ b/app/views/races/index.html.erb
@@ -2,42 +2,8 @@
 <html>
 <head>
   <title>Races</title> 
+    <%= render "shared/navbar_races" %>
 </head>
-<nav class="navbar navbar-default navbar-fixed-top">
-  <a class="navbar-brand" href="<%= root_path %>"><b>Fog City Run</b> </a>
-  <ul class="nav navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to "Home", root_path %></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
-    </li>
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Races</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to 'Racer Count', count_path %></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to 'Records', records_path %></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to 'Loop-Beer-Loop', loop_beer_path %></a>
-    </li>
-    <%= render "shared/import_button" %>
-  </ul>
-  <form class="navbar-form navbar-left" role="search">
-    <div class="input-group">
-      <%= form_tag(races_path, :method => "get", id: "search-form") do %>
-        <%= text_field_tag :search, params[:search], placeholder: "Search races...", class: 'form-control' %>
-        <span class="input-group-btn">
-          <%= submit_tag "Search", class: "btn btn-default" %>
-        </span>
-        <% end %>
-    </div>
-  </form>
-  <%= render "shared/login" %>
-</nav>
 <body style="padding-top: 60px">
   <div class="container-fluid">
     <table class="table table-hover table-bordered">
