--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -2,28 +2,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Races</title> 
+  <title>Results</title> 
+  <%= render "shared/navbar" %>
 </head>
-<nav class="navbar navbar-default navbar-fixed-top">
-  <a class="navbar-brand" href="#"><b>Fog City Run</b></a>
-  <ul class="nav navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to "Home", root_path %></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
-    </li>
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Races</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to 'Loop-Beer-Loop', loop_beer_path %></a>
-    </li>
-  </ul>
-</nav>
 <body style="padding-top: 60px">
 <div class="container-fluid">
-asdfas
   </div>
 </body>
 </html>
