--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,26 +2,8 @@
 <html>
 <head>
   <title>Users</title>
+  <%= render "shared/navbar" %>
 </head>
-<nav class="navbar navbar-default navbar-fixed-top">
-  <a class="navbar-brand" href="#"><b>Fog City Run</b></a>
-  <ul class="nav navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to "Home", root_path %></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Races</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to 'Loop-Beer-Loop', loop_beer_path %></a>
-    </li>
-    <%= render "shared/import_button" %>
-  </ul>
-  <%= render "shared/login" %>
-</nav>
 <body style="padding-top: 60px">
 <div class="container-fluid">
 <%= form_for :user, url: user_path(@user), method: :patch do |f| %>
