Moving Terms and Conditions to a seperate page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Races</title> 
+  <title>Races</title>
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
 <body class="container welcome" style="padding-top: 60px">
@@ -26,17 +26,12 @@
     <p><i class="fa fa-suitcase"></i><b>&nbsp;&nbsp;A locked closet is available for any extra belongings.</b></P>
     <p><a href="http://facebook.com/FogCityRun"><i class="fa fa-facebook-square"></i>&nbsp;&nbsp;Go to our Facebook page. </a></P>
     </div>
+    <div class="text-center">
+      <i><%= link_to "Terms and Conditions", safety_path, :class => "terms_link" %></i>
+    </div>
   </br>
   </div>
   </div>
-  </div> <!-- row -->
-  <br>
-    <div class="row">
-    <nav class="navbar navbar-default navbar-fixed-bottom">
-      <div class="col-md-12 " style="height:10%;">
-      <p><h6>By beginning, completing, or attempting to complete the Fog City Run, you expressly acknowledge and agree that your athletic activities, including but not limited to running, carry certain inherent and significant risks of property damage, bodily injury or death, and that you voluntarily assume all known and unknown risks associated with these activities even if caused in whole or part by the action, inaction or negligence of the organizers of the Fog City Run or by the action, inaction or negligence of others.</h6></p>
-      </div>
-    </nav>
   </div> <!-- row -->
   </div>
 </body>
