--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -27,6 +27,11 @@ h1 {
 	font-size: 45px;
 }
 
+.terms_link {
+    color: #727272 !important;
+}
+
+
 .panel-transparent {
     background: rgba(240, 240, 240, 0.8)!important;
 }
