--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+ .navbar-right {
+   margin-right: 20px;
+   margin-left: 10px;
+   padding: 0px;
+   color: #FF0000;
+   margin-top: 15px;
+ }
