--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,7 +13,7 @@
     <br>
     <div class="col-md-8 col-md-offset-2 panel panel-default panel-transparent" style="height:50%;">
     <div class="text-center">
-    <h1><b>Fog City Run</b></h1>
+    <h1><b>Fog City Run - test </b></h1>
     <p>A weekly running race in San Francisco, CA</p>
     <br>
     </div>
