--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <% flash.each do |key, value| %>
 	<div class="row">
-	<div class="col-md-3">
+	<div class="col-lg-10">
     <div class="alert alert-<%= key %>"><%= value %></div>
     </div>
     </div>
