--- a/app/views/shared/_login.html.erb
+++ b/app/views/shared/_login.html.erb
@@ -1,9 +1,8 @@
 <% if current_user and current_user.admin? %>
-<%= current_user.name %></i> (Admin) |  
-<%= link_to "Sign out", signout_path, id: "sign_out" %>
+<%= current_user.first_name %> <%= current_user.last_name %></i> |  Admin
+<%= link_to "Log out", logout_path, method: :delete %>
 <% elsif current_user %>
-<%= current_user.name %> </i> |
-<%= link_to "Sign out", signout_path, id: "sign_out" %>
+<%= current_user.first_name %> <%= current_user.last_name %></i>
 <% else %>
-<%= link_to "Sign in", "/auth/facebook", id: "sign_in" %>
+<%= link_to "Log in", login_path %>
 <% end %>
