--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,7 +8,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-3 col-md-offset-1">
-      <h2> New User </h2>
+      <h2> Edit User </h2>
     </div>
   </div>
   <% if @user.errors.any? %>
@@ -62,7 +62,7 @@
   </div>
   <div class="form-group">
     <div class="col-md-1 col-md-offset-1">
-    <%=button_tag "Submit", class: "btn btn-success"%>
+    <%=button_tag "Update", class: "btn btn-success"%>
     </div>
   </div>
   </div>
