Removing pages/upload and changing import color style

--- a/app/views/results/upload.html.erb
+++ b/app/views/results/upload.html.erb
@@ -15,7 +15,7 @@
         Date: <%=date_field_tag :date%>
         <br>
         <br>
-        <%=button_tag "Import", class: "btn btn-default"%>
+        <%=button_tag "Import", class: "btn btn-success"%>
       <% end %>
     </div>
 </div>
