--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -49,7 +49,7 @@
       </div>
   </div>
   <div class="form-group">
-    <%= u.label :strava_link, "Strave Link:", class: "col-md-1 control-label" %>
+    <%= u.label :strava_link, "Strava Link:", class: "col-md-1 control-label" %>
       <div class="col-md-3">
         <%= u.text_field :strava_link, class: "form-control"%>
       </div>
