Adding Shop - The shop allows users to place orders. For now, users are only allowed to place a single order. - The items to purchase are specificed in the Shop view. There are no item entities (yet). - Hardcoded into the pages controller is the requirement that users need 30 or more races to view the shop.

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -35,6 +35,7 @@
           </ul>
         </li>
         <%= render "shared/import_button" %>
+        <%= render "shared/shop_button" %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <%= render "shared/login" %>
