--- a/app/views/shared/_navbar_racers.html.erb
+++ b/app/views/shared/_navbar_racers.html.erb
@@ -39,6 +39,7 @@
             </li>
           </ul>
           <%= render "shared/import_button" %>
+          <%= render "shared/shop_button" %>
         </li>
          <form class="navbar-form navbar-left" role="search">
            <div class="input-group">
