--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -25,6 +25,12 @@
   <% end %>
   <%= form_for @order, :html => {:class => "form-horizontal "} do |u| %>
   <div class="form-group">
+    <%= u.label :user_id, "User ID", class: "col-md-1 control-label" %>
+      <div class="col-md-3">
+        <%= u.text_field :user_id, class: "form-control", :value => params[:user_id]%>
+      </div>
+  </div>
+  <div class="form-group">
     <%= u.label :item, "Item", class: "col-md-1 control-label" %>
       <div class="col-md-3">
         <%= u.text_field :item, class: "form-control", :value => params[:item] %>
